# TimeShotRenamer

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: logic.rs  main.rs
timeshot_core/: Cargo.toml
timeshot_core/src/: lib.rs  types.rs
timeshot_core/src/exif/: analyze.rs  mod.rs  model.rs  reader.rs
timeshot_core/src/export/: csv.rs  json.rs
timeshot_core/src/filename/: matcher.rs  mod.rs  parser.rs
timeshot_core/src/hash/: compute.rs  detect.rs  mod.rs
timeshot_core/src/renamer/: generator.rs  mod.rs  rules.rs
timeshot_gui/: Cargo.toml
timeshot_gui/src/: file_data_item.rs  main.rs  search_handler.rs  ui.rs
