[package]
name = "TimeShotRenamer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.25"
rfd = "0.13"
walkdir = "2.4.0"
kamadak-exif = "0.6.1"
chrono = "0.4"
regex = "1"
winapi = { version = "0.3.9", features = ["winuser", "windef"] }

[profile.release]
opt-level = 3

[[bin]]
name = "photo_renamer"
path = "src/main.rs"
windows_subsystem = "windows"
