[package]
name = "TimeShotRenamer"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.25"
eframe = "0.24"
walkdir = "2"
kamadak-exif = "0.6"
rfd = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winapi = { version = "0.3.9", features = ["winuser", "windef"] }

[[bin]]
name = "TimeShotRenamer"
path = "src/main.rs"
windows_subsystem = "windows"
