[workspace]
resolver = "2"
members = [
    "timeshot_core",
    "timeshot_gui"
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
# Dépendances communes si tu veux les partager (optionnel)
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
