# timeshotrenamer_complet_final/timeshot_core/Cargo.toml

[package]
name = "timeshot_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
kamadak-exif = "0.6"
walkdir = "2.4.0" # Exemple de version, ajustez si nécessaire
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
regex = "1.10.2"
blake3 = "1.5.0"
log = "0.4"

[features]
default = []
# Ajoutez d'autres features si nécessaire