[package]
name = "timeshot_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_12"] } # Ou votre version actuelle de gtk4
regex = "1"
chrono = { version = "0.4", features = ["serde"] } # <--- AJOUTER/VÉRIFIER
once_cell = "1.19" # <--- AJOUTER/VÉRIFIER (utiliser une version récente)
timeshot_core = { path = "../timeshot_core" }

# Ajoutez ceci si vous compilez pour Windows avec MinGW et voulez éviter la console
# [build-dependencies]
# embed-resource = "1.4"